--- a/figma.css
+++ b/figma.css
@@ -1,25 +1,39 @@
 * {
     margin: 0;
-    padding: 0;
+    padding-bottom: 5px;
+
 }
+
 .container {
     overflow-x: hidden;
 }
 
 .navbar {
+    width: 1440px;
+    height: 100px;
     display: grid;
-    grid-template-columns: 1fr 2fr; 
-    align-items: center; 
+    grid-template-columns: 1fr 1fr; 
     border: solid black;
     margin: 0;
-    padding: o;
+    padding: 0;
 }
 
-li a{
+.nav-li{
+    display: flex;
+    align-items: center; 
+    padding: 30px;
+    gap: 40px;  
+}
+li a {
     text-decoration: none;
     color: black;
 }
 
+.nav-li li{
+    display: flex;
+    justify-content: space-between;
+
+}
 
 .main{
     background-image: url('img/main.svg');
@@ -29,11 +43,13 @@ li a{
     margin: 0;
     padding: 0;
 }
+
 .main h1{
     color: white;
     font-size: 27px;
     padding-top: 244px;
 }
+
 .main a {
     margin-top: 28px;
     text-decoration: none;
@@ -45,13 +61,91 @@ li a{
     border: solid 2px rgb(235, 230, 230);
 }
 
-
-
-.col {
-    width: 100%;
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-    padding: 20px;
+.colum{
+    width: 1440px;
+    height: 155px;
 }
 
+.col {
+    
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    padding: 40px;
+}
+.logo-list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+.logo-listt{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+.img-text {
+    display: flex;
+    align-items: center; 
+    gap: 10px;
+}
+
+.rasm-qator{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; 
+    justify-content: flex-end; 
+    align-items: center; 
+}
+
+.qator{
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+
+.body {
+    width: 1440px;
+    height: 660px;
+}
+.text-center{
+    width: 1440px;
+    height: 500px;
+}
+.img-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.text-t{
+    padding-right: 30px;
+    line-height: 1.8;
+    display: block; 
+    text-align: right;
+}
+
+.img-container img{
+    float: right;
+}
+
+.img-2 img{
+    float: left;
+    min-width: 600;
+}
+
+.text-t-1{
+    padding-left: 20px;
+}
+
+.qator-1{
+    display: flex;
+}
+.qator-2{
+    display: flex;
+}
